[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ui/Itembox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/InventoryUI.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/ItemboxDelete.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/RecipeBrowser.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/ui/settings_gear.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/settings_gear_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/art/items/coin.png" type="Texture" id=7]
[ext_resource path="res://assets/font/PixeloidMono-1G8ae.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/ui/Equipbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/SettingsMenu.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 8 )

[node name="InventoryUI" type="CanvasLayer" groups=["InventoryUI"]]
script = ExtResource( 2 )
itembox_scene = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -896.0
margin_top = -476.0
margin_right = 896.0
margin_bottom = 484.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Items" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 272.0
margin_top = 132.0
margin_right = 312.0
margin_bottom = 172.0

[node name="ItemboxDelete" parent="." instance=ExtResource( 3 )]
position = Vector2( 664, 128 )

[node name="RecipeBrowser" parent="." instance=ExtResource( 4 )]
margin_left = -192.0
margin_top = -460.0
margin_right = 512.0
margin_bottom = 276.0

[node name="ButtonSettings" type="TextureButton" parent="."]
margin_left = 1864.0
margin_top = 8.0
margin_right = 1890.0
margin_bottom = 34.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="Gold" type="Sprite" parent="."]
position = Vector2( 32, 160 )
texture = ExtResource( 7 )

[node name="Amount" type="Label" parent="Gold"]
margin_left = 32.0
margin_top = -24.0
margin_right = 128.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Headbox" parent="." instance=ExtResource( 9 )]
position = Vector2( 664, 528 )

[node name="Chestbox" parent="." instance=ExtResource( 9 )]
position = Vector2( 664, 632 )
type = 1

[node name="Feetbox" parent="." instance=ExtResource( 9 )]
position = Vector2( 664, 736 )
type = 2

[node name="SettingsMenuUI" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = 768.0
margin_top = 352.0
margin_right = 1728.0
margin_bottom = 992.0

[connection signal="trash_clicked" from="ItemboxDelete" to="." method="_on_delete_clicked"]
[connection signal="pressed" from="ButtonSettings" to="." method="_on_settings_pressed"]
[connection signal="itembox_clicked" from="Headbox" to="." method="_on_equipbox_clicked"]
[connection signal="itembox_clicked" from="Chestbox" to="." method="_on_equipbox_clicked"]
[connection signal="itembox_clicked" from="Feetbox" to="." method="_on_equipbox_clicked"]
[connection signal="visibility_changed" from="SettingsMenuUI" to="." method="_on_settings_toggled"]
